--- a/style.css
+++ b/style.css
@@ -690,6 +690,7 @@ ul li a:hover {
   background: #fff;
   border-top: 1px solid #ddd;
   padding: 50px 20px 20px;
+  
 }
 
 .footer-container {
@@ -697,6 +698,7 @@ ul li a:hover {
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   gap: 40px;
   margin-bottom: 20px;
+  border: black solid 1px;
 }
 
 .footer-about h3 {
@@ -728,6 +730,8 @@ ul li a:hover {
 .footer-about-links ul {
   list-style: none;
   padding: 0;
+  display: block;
+  border: black solid 1px;
 }
 
 .footer-links li,
