--- a/style.css
+++ b/style.css
@@ -1,141 +1,115 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-.page1 {
-  height: 100vh;
-  background: linear-gradient(
-      to top,
-      rgba(0, 0, 0, 0.5) 50%,
-      rgba(0, 0, 0, 0.5) 50%
-    ),
-    url(images/Mountain.png);
-  background-size: cover;
-  background-color: black; /* bo‘sh joy qolsa orqa fon to‘ldiradi */
-  background-position: center;
-  color: white;
+body {
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
-.icon {
-  width: 200px;
-  float: left;
-  height: 70px;
-  gap: 10px;
+.main-header {
   display: flex;
   align-items: center;
-}
-
-.logo {
-  color: orange;
-  font-size: 35px;
-  font-family: Arial;
-  float: left;
-  padding-left: 20px;
-  padding-top: 10px;
-}
-
-.menu {
-  width: 400px;
-  float: left;
-  height: 70px;
-}
-
-.navbar {
-  width: 1200px;
-  height: 75px;
-  margin: auto;
-}
-
-ul {
-  float: left;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-ul li {
-  list-style: none;
-  margin-left: 62px;
-  margin-top: 27px;
-  font-size: 14px;
-}
-ul li a {
-  text-decoration: none;
-  color: azure;
-  font-family: Arial;
-  font-weight: bold;
-  transition: 0.4s ease-in-out;
-}
-
-ul li a:hover {
-  color: chocolate;
-}
-
-.signup {
-  width: 330px;
-  float: left;
-  margin-left: 270px;
-}
-.su {
-  font-family: "Times New Roman";
-  width: 150px;
-  height: 40px;
-  border: 1px solid chocolate;
-  margin-top: 13px;
-  float: left;
-  font-size: 16px;
-  padding: 10px;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+  position: fixed;
+  background: white;
+  width: 100%;
+  z-index: 10;
+  top: 0;
   background: transparent;
 }
 
-.content {
-  width: 1200px;
-  margin: auto;
-  height: auto;
-  color: azure;
-  position: relative;
+.main-header__brand {
+  display: inline-block;
 }
 
-.content .par {
-  padding-left: 20px;
+.main-header__brand img {
+  width: 64px;
+}
+
+.main-navigation {
+  display: inline-block;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+.main-navigation__item {
+  display: inline-block;
+  padding: 10px;
+}
+.main-navigation__item a {
+  color: chocolate;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.main-navigation__item a:hover {
+  color: pink;
+}
+
+.main-navigation__item.active a {
+  color: pink;
+}
+
+.page1 {
+  padding-top: 140px;
+  padding-left: 50px;
+  height: 100vh;
+  width: 100%;
+  background: url(images/Mountain.png) no-repeat;
+  background-size: cover;
+  color: white;
+  z-index: 1;
+}
+
+.page1 .par {
   padding-bottom: 25px;
   font-family: Arial;
-  margin-top: 20px;
+  margin-top: 30px;
   letter-spacing: 1.2px;
   line-height: 30px;
 }
 
-.content h1 {
-  font-size: 60px;
-  padding-left: 20px;
+.page1__title1 {
+  font-size: 22px;
+  letter-spacing: 2px;
+  font-family: Arial;
+  color: chocolate;
+}
+.page1__title2 {
+  font-size: 70px;
   letter-spacing: 2px;
   font-family: Arial;
   font-weight: bold;
 }
-.content h4 {
-  font-size: 20px;
-  padding-left: 20px;
-  letter-spacing: 2px;
-  margin-top: 9%;
-  font-family: Arial;
-  color: chocolate;
-}
 
-.content .btn1,
-.content .btn2 {
+
+.page1 .btn1,
+.page1 .btn2 {
   width: 160px;
   height: 40px;
   background: chocolate;
   border: none;
   margin-bottom: 10px;
-  margin-left: 20px;
   border-radius: 10px;
   font-size: 18px;
   cursor: pointer;
   transition: 0.4s ease;
 }
-.content .btn1,
-.content .btn2 a {
+.page1 .btn1,
+.page1 .btn2 a {
   text-decoration: none;
   color: azure;
   transition: 0.3s ease;
@@ -149,6 +123,7 @@ ul li a:hover {
   justify-content: center;
   align-items: center;
   margin-top: 30px;
+  gap: 100px;
 }
 
 .bx1,
@@ -188,7 +163,7 @@ ul li a:hover {
   color: white;
 }
 
-.content2 {
+.page2 {
   width: 1200px;
   margin: auto;
   height: auto;
@@ -196,7 +171,7 @@ ul li a:hover {
   position: relative;
 }
 
-.content2 .title1 h2 {
+.page2 .title1 h2 {
   font-size: 60px;
   padding-left: 20px;
   letter-spacing: 1px;
@@ -205,7 +180,7 @@ ul li a:hover {
   text-align: center;
   font-weight: bold;
 }
-.content2 .title1 h4 {
+.page2 .title1 h4 {
   font-size: 20px;
   padding-left: 20px;
   letter-spacing: 2px;
@@ -215,7 +190,7 @@ ul li a:hover {
   color: chocolate;
 }
 
-.content2 .par {
+.page2 .par {
   padding-left: 20px;
   padding-bottom: 25px;
   font-family: Arial;
@@ -277,14 +252,14 @@ ul li a:hover {
   font-weight: bold;
 }
 
-.section {
+.page3 {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin: 50px;
 }
 
-.section img {
+.page3 img {
   width: 560px;
   height: auto;
   border-radius: 10px;
@@ -292,13 +267,13 @@ ul li a:hover {
 }
 
 /* title qismi */
-.section .title {
+.page3 .title {
   flex: 1;
   display: flex;
   flex-direction: column;
 }
 
-.section .title h4 {
+.page3 .title h4 {
   font-size: 18px;
   color: chocolate;
   letter-spacing: 2px;
@@ -306,7 +281,7 @@ ul li a:hover {
   margin-left: -490px;
 }
 
-.section .title h2 {
+.page3 .title h2 {
   font-size: 48px;
   font-family: "Times New Roman", serif;
   font-weight: bold;
@@ -314,7 +289,7 @@ ul li a:hover {
   margin-bottom: 20px;
 }
 
-.section .title .par {
+.page3 .title .par {
   width: 500px;
   height: auto;
   font-family: Arial, sans-serif;
@@ -326,7 +301,7 @@ ul li a:hover {
   padding: 15px;
 }
 
-.section .btn {
+.page3 .btn {
   width: 160px;
   height: 40px;
   background: rgb(255, 106, 0);
@@ -338,20 +313,20 @@ ul li a:hover {
   transition: 0.4s ease;
 }
 
-.section .btn a {
+.page3 .btn a {
   text-decoration: none;
   color: white;
 }
 
-.section .btn:hover {
+.page3 .btn:hover {
   background: azure;
 }
 
-.section .btn:hover a {
+.page3 .btn:hover a {
   color: chocolate;
 }
 
-.section2 {
+.page4 {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -359,14 +334,14 @@ ul li a:hover {
   gap: 40px;
 }
 
-.section2 img {
+.page4 img {
   width: 560px;
   height: auto;
   border-radius: 10px;
   margin-top: 50px;
 }
 
-.section2 .title {
+.page4 .title {
   display: flex;
   flex-direction: column;
   width: 600px;
@@ -374,7 +349,7 @@ ul li a:hover {
   padding: 20px;
 }
 
-.section2 .title h4 {
+.page4 .title h4 {
   font-size: 18px;
   color: chocolate;
   letter-spacing: 2px;
@@ -383,7 +358,7 @@ ul li a:hover {
   margin-left: -320px;
 }
 
-.section2 .title h2 {
+.page4 .title h2 {
   font-size: 48px;
   font-family: "Times New Roman", serif;
   font-weight: bold;
@@ -391,7 +366,7 @@ ul li a:hover {
   margin-left: -110px;
 }
 
-.section2 .title .par {
+.page4 .title .par {
   font-family: Arial, sans-serif;
   font-size: 18px;
   line-height: 28px;
@@ -399,7 +374,7 @@ ul li a:hover {
   margin-bottom: 30px;
 }
 
-.section2 .btn {
+.page4 .btn {
   width: 160px;
   height: 40px;
   background: rgb(255, 106, 0);
@@ -411,27 +386,27 @@ ul li a:hover {
   transition: 0.4s ease;
 }
 
-.section2 .btn a {
+.page4 .btn a {
   text-decoration: none;
   color: white;
 }
 
-.section2 .btn:hover {
+.page4 .btn:hover {
   background: azure;
 }
 
-.section2 .btn:hover a {
+.page4 .btn:hover a {
   color: chocolate;
 }
 
-.section3 {
+.page5 {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 50px;
 }
 
-.section3 .images {
+.page5 .images {
   display: flex;
   align-items: center;
   width: 1200px;
@@ -440,7 +415,7 @@ ul li a:hover {
   gap: 20px;
 }
 
-.section3 .title {
+.page5 .title {
   display: flex;
   text-align: center;
   flex-direction: column;
@@ -449,20 +424,20 @@ ul li a:hover {
   margin-top: 100px;
 }
 
-.section3 .title h4 {
+.page5 .title h4 {
   font-size: 18px;
   color: chocolate;
   letter-spacing: 2px;
 }
 
-.section3 .title h2 {
+.page5 .title h2 {
   font-size: 48px;
   font-family: "Times New Roman", serif;
   font-weight: bold;
   color: black;
 }
 
-.section3 .title .par {
+.page5 .title .par {
   width: 500px;
   height: auto;
   font-family: Arial, sans-serif;
@@ -471,27 +446,27 @@ ul li a:hover {
   color: #333;
 }
 
-.section3 .images .im1,
-.section3 .images .im2,
-.section3 .images .im3,
-.section3 .images .im4 {
+.page5 .images .im1,
+.page5 .images .im2,
+.page5 .images .im3,
+.page5 .images .im4 {
   position: relative;
   height: auto;
 }
 
-.section3 .images .im1 .bg,
-.section3 .images .im2 .bg,
-.section3 .images .im3 .bg,
-.section3 .images .im4 .bg {
+.page5 .images .im1 .bg,
+.page5 .images .im2 .bg,
+.page5 .images .im3 .bg,
+.page5 .images .im4 .bg {
   width: 270px;
   height: auto;
   display: block;
 }
 
-.section3 .images .im1 .overlay,
-.section3 .images .im2 .overlay,
-.section3 .images .im3 .overlay,
-.section3 .images .im4 .overlay {
+.page5 .images .im1 .overlay,
+.page5 .images .im2 .overlay,
+.page5 .images .im3 .overlay,
+.page5 .images .im4 .overlay {
   position: absolute;
   top: 20px;
   left: 20px;
@@ -499,64 +474,62 @@ ul li a:hover {
   height: auto;
 }
 
-.section3 .images .im1 h5,
-.section3 .images .im2 h5,
-.section3 .images .im3 h5,
-.section3 .images .im4 h5 {
+.page5 .images .im1 h5,
+.page5 .images .im2 h5,
+.page5 .images .im3 h5,
+.page5 .images .im4 h5 {
   text-align: center;
   font-size: 20px;
   padding: 20px;
   color: black;
 }
 
-.section3 .images #spec {
+.page5 .images #spec {
   width: 250px;
   margin: 4px;
   padding-left: 10px;
 }
 
-.section3 .images p {
+.page5 .images p {
   font-size: 19px;
   text-align: center;
   padding: 10px;
   font-weight: bold;
   color: black;
 }
-.section3 .images span {
+.page5 .images span {
   font-weight: lighter;
 }
 
-.section4 {
+.page6 {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 50px;
-  
 }
 
-.section4 .title {
+.page6 .title {
   display: flex;
   text-align: center;
   flex-direction: column;
   width: 500px;
   height: auto;
   margin-top: 100px;
-  
 }
-.section4 .title h4 {
+.page6 .title h4 {
   font-size: 18px;
   color: chocolate;
   letter-spacing: 2px;
 }
 
-.section4 .title h2 {
+.page6 .title h2 {
   font-size: 48px;
   font-family: "Times New Roman", serif;
   font-weight: bold;
   color: black;
 }
 
-.section4 .title .par {
+.page6 .title .par {
   width: 500px;
   height: auto;
   font-family: Arial, sans-serif;
@@ -565,69 +538,67 @@ ul li a:hover {
   color: black;
 }
 
-
-.section4 .user-feedback {
+.page6 .user-feedback {
   display: flex;
   flex-direction: row;
   width: 1400px;
   height: auto;
-  
 }
 
-.section4 .user-feedback .user1,
-.section4 .user-feedback .user2,
-.section4 .user-feedback .user3 {
+.page6 .user-feedback .user1,
+.page6 .user-feedback .user2,
+.page6 .user-feedback .user3 {
   width: 400px;
   height: auto;
   margin: 20px;
   padding: 20px;
   color: black;
   border-radius: 10px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);  
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-.section4 .user-feedback .user1:hover,
-.section4 .user-feedback .user2:hover,
-.section4 .user-feedback .user3:hover {
+.page6 .user-feedback .user1:hover,
+.page6 .user-feedback .user2:hover,
+.page6 .user-feedback .user3:hover {
   transform: translateY(-8px);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
 }
 
-.section4 .user-feedback .user1 .par,
-.section4 .user-feedback .user2 .par,
-.section4 .user-feedback .user3 .par {
+.page6 .user-feedback .user1 .par,
+.page6 .user-feedback .user2 .par,
+.page6 .user-feedback .user3 .par {
   font-family: sans-serif;
   font-size: 16px;
   line-height: 24px;
   margin-top: 20px;
 }
 
-.section4 .user-feedback .rt {
+.page6 .user-feedback .rt {
   display: flex;
   align-items: center;
-  justify-content: space-between; 
+  justify-content: space-between;
   margin-top: 20px;
 }
 
-.section4 .user-feedback .rt .info {
+.page6 .user-feedback .rt .info {
   display: flex;
   flex-direction: column;
 }
 
-.section4 .user-feedback .rt h4 {
+.page6 .user-feedback .rt h4 {
   font-size: 18px;
   color: black;
   margin: 0;
 }
 
-.section4 .user-feedback .rt h5 {
+.page6 .user-feedback .rt h5 {
   font-size: 16px;
   color: gray;
   font-weight: lighter;
   margin: 0;
 }
 
-.section4 .user-feedback #rating {
+.page6 .user-feedback #rating {
   width: 130px;
   height: 20px;
   margin: 0;
@@ -690,7 +661,6 @@ ul li a:hover {
   background: #fff;
   border-top: 1px solid #ddd;
   padding: 50px 20px 20px;
-  
 }
 
 .footer-container {
