--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ ul {
 }
 
 .page1 {
-  padding-top: 8.75rem;
+  padding-top: 6.5rem;
   padding-left: 3.125rem;
   height: 100vh;
   width: 100%;
@@ -117,7 +117,7 @@ ul {
 .page1 .par {
   padding-bottom: 1.5625rem;
   font-family: Arial;
-  margin-top: 1.875rem;
+  margin-top: 1.5rem;
   letter-spacing: 0.075rem;
   line-height: 1.875rem;
 }
@@ -169,7 +169,7 @@ ul {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 1.875rem;
+  margin-top: 1.2rem;
   gap: 6.25rem;
 }
 
@@ -178,8 +178,7 @@ ul {
 .bx3 {
   width: 21rem;
   height: 12rem;
-  margin: 1.25rem;
-  padding: 1.25rem;
+  padding: 1rem;
   border-radius: 0.625rem;
   margin-right: 0.625rem;
   transition: 0.4s ease;
@@ -197,17 +196,10 @@ ul {
   margin: 0;
 }
 
-.title h3 {
-  margin: 0;
-  font-size: 1.125rem;
-  font-weight: bold;
-  color: white;
-}
-
 /* Section 2 */
 .page2 {
   width: 100%;
-  padding: 0 9.375rem 6.25rem;
+  padding: 2rem 9.375rem 6.25rem;
   height: auto;
   color: black;
   position: relative;
